--- a/sap_simulate.qmd
+++ b/sap_simulate.qmd
@@ -14,7 +14,7 @@ First load the requisite packages and simulation functions, plus the landscapes 
 
 ```{r}
 ## load code
-library(readr) # for writing rds
+library(readr) # for read/write rds
 library(future)
 library(furrr)
 source("parasite_sim_functions.R") ## loads required packages as well
