--- a/sap_figures.qmd
+++ b/sap_figures.qmd
@@ -18,7 +18,7 @@ library(dplyr) # general data manipulation
 library(purrr) # for mapping functions
 library(ggplot2) # for plotting
 library(tibble) # for tibbles instead of dataframes
-library(readr) # for writing rds
+library(readr) # for read/write rds
 library(ggplot2) # for plotting
 library(broom)
 
