--- a/sap_nonspatial_supplement.qmd
+++ b/sap_nonspatial_supplement.qmd
@@ -16,7 +16,7 @@ Load tidyverse library for easy data manipulation.
 library(dplyr) # general data manipulation
 library(purrr) # for mapping functions
 library(tibble) # for tibbles instead of dataframes
-library(readr) # for writing rds
+library(readr) # for read/write rds
 library(ggplot2) # for plotting
 ```
 
